# cav2013-p1

./: .gitignore  Doxyfile  Makefile.am  README  README.md  autogen.sh  cav.sublime-project  config.h  configure.ac  enconde.sh
doc/: README.md
src/: Makefile.am  block.cc  block.h  frame.cc  frame.h  frame420.cc  frame420.h  frame422.cc  frame422.h  frame444.cc  frame444.h  framergb.cc  framergb.h  subblock.cc  subblock.h  test.cc  video-format.h  video.cc  video.h  videoEffects  videoEffects.cc  yuvComp.cc  yuvConvert  yuvConvert.cc  yuvCopy.cc  yuvResize.cc  yuvShow.cc
src/exceptions/: cav-exceptions.h
src/libcav/: Makefile.am  bitstream.cc  bitstream.h  block.cc  block.h  cav-header.h  coder.h  frame.cc  frame.h  frame420.cc  frame420.h  frame422.cc  frame422.h  frame444.cc  frame444.h  framergb.cc  framergb.h  golomb-interframe.cc  golomb-interframe.h  golomb.cc  golomb.h  libcav.h  linear-predictor.cc  linear-predictor.h  nonlinear-predictor.cc  nonlinear-predictor.h  predictor.cc  predictor.h  util.cc  util.h  video-encoded.cc  video-encoded.h  video-interface.cc  video-interface.h  video.cc  video.h
src/utils/: Makefile.am  encode-decode.cc  frameExtractor.cc  libcav.h  videoEffects.cc  yuvComp  yuvComp.cc  yuvConvert.cc  yuvCopy  yuvCopy.cc  yuvResize.cc  yuvShow  yuvShow.cc
